src/objects/Assessment_Event__c.object
<CustomObject>
    <description>Where ExAM stores data about Assessment Events including Date, Start and Finish Times.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Finish_Time__c</fullName>
        <label>Event Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Assessment Event</label>
    <nameField>
        <label>Assessment Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>